# Tests

Const_In_class_Test/: CMakeLists.txt
Const_In_class_Test/src/: test.cmd  test2.cmd
add_duration_test/: CMakeLists.txt  query_input.txt
add_duration_test/src/: main.cpp
cbk/: CMakeLists.txt
conan/test/: CMakeLists.txt  conanfile.py  main.cpp
conan/test2/: CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  main.cpp
conan/test4/fmt_test/: CMakeLists.txt  bld.bat  bld_.bat  conanfile.txt
conan/test4/fmt_test/src/: main.cpp
cpp/Const_In_class_Test/src/: main.cpp  test.cmd
cpp/add_duration_test/src/: main.cpp
cpp/cbk/src/: main.cpp
cpp/list/: CMakeLists.txt
cpp/list/src/: main.cpp
cpp/move_test/: CMakeLists.txt
cpp/move_test/src/: main.cpp
cpp/stringstream/: CMakeLists.txt
cpp/stringstream/src/: main.cpp
cpp/template_test/src/: main.cpp
cpp/test_timer/src/: main.cpp
git/: git_help.txt
random_generator/: CMakeLists.txt  main.cpp
random_generator/src/: main.cpp
substr_test/: CMakeLists.txt
substr_test/src/: main.cpp
synch/: CMakeLists.txt
synch/src/: main.cpp  synchronized.h
template_test/src/: main.cpp
test_timer/: CMakeLists.txt
